--- a/carta.html
+++ b/carta.html
@@ -42,10 +42,12 @@
   </header>
 
   <main class="container section">
-    <h2>Carta Temporada 2025–2026</h2>
-    <p class="muted">Precios en CLP. Para reservas o consultas, escríbenos por WhatsApp.</p>
+    <div data-animate>
+      <h2>Carta Temporada 2025–2026</h2>
+      <p class="muted">Precios en CLP. Para reservas o consultas, escríbenos por WhatsApp.</p>
+    </div>
 
-    <div class="cta-row">
+    <div class="cta-row" data-animate>
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Reservar mesa</a>
       <a class="btn" href="index.html">⬅ Volver</a>
     </div>
@@ -53,7 +55,7 @@
     <hr class="sep" />
 
     <!-- COMIDA -->
-    <div class="grid">
+    <div class="grid" data-animate-stagger>
       <div class="card">
         <h2>Entradas</h2>
         <div class="list">
@@ -136,7 +138,7 @@
     <hr class="sep" />
 
     <!-- BEBESTIBLES -->
-    <div class="grid">
+    <div class="grid" data-animate-stagger>
       <div class="card">
         <h2>Jugos y bebidas</h2>
         <div class="list">
@@ -203,5 +205,7 @@
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar</a>
     </div>
   </div>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
