--- a/en/menu.html
+++ b/en/menu.html
@@ -42,10 +42,12 @@
   </header>
 
   <main class="container section">
-    <h2>2025–2026 Season Menu</h2>
-    <p class="muted">Prices in CLP. For bookings or questions, message us on WhatsApp.</p>
+    <div data-animate>
+      <h2>2025–2026 Season Menu</h2>
+      <p class="muted">Prices in CLP. For bookings or questions, message us on WhatsApp.</p>
+    </div>
 
-    <div class="cta-row">
+    <div class="cta-row" data-animate>
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Book a table</a>
       <a class="btn" href="index.html">⬅ Back</a>
     </div>
@@ -53,7 +55,7 @@
     <hr class="sep" />
 
     <!-- FOOD -->
-    <div class="grid">
+    <div class="grid" data-animate-stagger>
       <div class="card">
         <h2>Starters</h2>
         <div class="list">
@@ -136,7 +138,7 @@
     <hr class="sep" />
 
     <!-- DRINKS -->
-    <div class="grid">
+    <div class="grid" data-animate-stagger>
       <div class="card">
         <h2>Juices & soft drinks</h2>
         <div class="list">
@@ -203,5 +205,7 @@
       <a class="btn" href="rooms.html">Rooms</a>
     </div>
   </div>
+
+  <script src="../script.js" defer></script>
 </body>
 </html>
