--- a/en/rooms.html
+++ b/en/rooms.html
@@ -41,19 +41,21 @@
   </header>
 
   <main class="container section">
-    <h2>Rooms</h2>
-    <p class="muted">
-      We have 3 rooms equipped with a queen bed, with the option to add an extra single bed for a flexible and comfortable stay (capacity 2–3 guests).
-    </p>
+    <div data-animate>
+      <h2>Rooms</h2>
+      <p class="muted">
+        We have 3 rooms equipped with a queen bed, with the option to add an extra single bed for a flexible and comfortable stay (capacity 2–3 guests).
+      </p>
+    </div>
 
-    <div class="cta-row">
+    <div class="cta-row" data-animate>
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Check availability</a>
       <a class="btn" href="index.html">⬅ Back</a>
     </div>
 
     <hr class="sep" />
 
-    <div class="grid">
+    <div class="grid" data-animate-stagger>
       <div class="card">
         <h2>Tehuelche Room</h2>
         <p class="muted">Capacity: 2–3 · Bathroom: Private · Breakfast: Mon–Sun 7:30–10:00</p>
@@ -146,5 +148,7 @@
       <a class="btn" href="contact.html">Contact</a>
     </div>
   </div>
+
+  <script src="../script.js" defer></script>
 </body>
 </html>
