--- a/habitaciones.html
+++ b/habitaciones.html
@@ -42,17 +42,19 @@
   </header>
 
   <main class="container section">
-    <h2>Habitaciones</h2>
-    <p class="muted">Tenemos 3 habitaciones equipadas con cama matrimonial, y la opción de incorporar una cama individual adicional, para una estadía flexible y confortable (capacidad 2–3 personas).</p>
+    <div data-animate>
+      <h2>Habitaciones</h2>
+      <p class="muted">Tenemos 3 habitaciones equipadas con cama matrimonial, y la opción de incorporar una cama individual adicional, para una estadía flexible y confortable (capacidad 2–3 personas).</p>
+    </div>
 
-    <div class="cta-row">
+    <div class="cta-row" data-animate>
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
       <a class="btn" href="index.html">⬅ Volver</a>
     </div>
 
     <hr class="sep" />
 
-    <div class="grid">
+    <div class="grid" data-animate-stagger>
       <div class="card">
         <h2>Habitación Tehuelche</h2>
         <p class="muted">Capacidad: 2–3 · Baño: Privado · Desayuno: Lun–Dom 7:30–10:00</p>
@@ -145,5 +147,7 @@
       <a class="btn" href="contacto.html">Contacto</a>
     </div>
   </div>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
