--- a/en/contact.html
+++ b/en/contact.html
@@ -42,9 +42,11 @@
   </header>
 
   <main class="container section">
-    <h2>Contact</h2>
+    <div data-animate>
+      <h2>Contact</h2>
+    </div>
 
-    <div class="grid">
+    <div class="grid" data-animate-stagger>
       <div class="card">
         <h2>WhatsApp (reservations)</h2>
         <p class="muted">The fastest way to reach us.</p>
@@ -95,5 +97,7 @@
       <a class="btn" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">Maps</a>
     </div>
   </div>
+
+  <script src="../script.js" defer></script>
 </body>
 </html>
