--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </header>
 
   <main class="container">
-    <section class="hero">
+    <section class="hero" data-animate>
       <div class="hero-grid">
         <div class="card">
           <h1 class="h1">Reserva directa, simple y rápida.</h1>
@@ -117,9 +117,9 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section" data-animate>
       <h2>Lo esencial</h2>
-      <div class="grid">
+      <div class="grid" data-animate-stagger>
         <div class="card">
           <div class="kv">
             <strong>Restaurante</strong>
@@ -171,6 +171,7 @@
     </div>
   </div>
 
+  <script src="script.js" defer></script>
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
