--- a/en/index.html
+++ b/en/index.html
@@ -156,13 +156,182 @@
       </div>
     </section>
 
-    <section class="footer">
-      <hr class="sep" />
-      <div class="small">
-        © <span id="y"></span> Casona Belga · Rest well, eat better.
+    <!-- NEW SECTION: Patagonian Experience -->
+    <section class="section-sm" data-animate>
+      <div class="container-narrow">
+        <div class="text-center">
+          <h2>Authentic Patagonian Experience</h2>
+          <div class="decorative-line" style="margin: 24px auto;"></div>
+          <p class="lead">
+            At Casona Belga, we believe in conscious hospitality: every detail is designed for your well-being and in harmony with our Patagonian environment.
+          </p>
+        </div>
+
+        <div class="feature-list mt-xl" data-animate-stagger>
+          <div class="feature-item">
+            <div class="feature-icon">🌿</div>
+            <div class="feature-content">
+              <h4>Local Ingredients</h4>
+              <p>We work with Chile Chico producers to offer the best of Patagonia in every dish.</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">🛏️</div>
+            <div class="feature-content">
+              <h4>Deep Rest</h4>
+              <p>Premium mattresses, 1,000-thread-count sheets, and salt lamps for your total recovery.</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">🏔️</div>
+            <div class="feature-content">
+              <h4>Connection with Nature</h4>
+              <p>Privileged location near Lake General Carrera and the Andes Mountains.</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">💚</div>
+            <div class="feature-content">
+              <h4>Sustainability</h4>
+              <p>Responsible practices to care for our unique Patagonian environment.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- NEW SECTION: Discover Chile Chico -->
+    <section class="section-sm" data-animate>
+      <div class="container">
+        <h2 class="text-center">Discover Chile Chico</h2>
+        <p class="text-center text-muted mb-xl">
+          Must-see activities and places in Patagonia
+        </p>
+
+        <div class="grid" data-animate-stagger>
+          <div class="card card-flat">
+            <h3>🚣 Lake General Carrera</h3>
+            <p class="small">
+              South America's second-largest lake. Explore the Marble Cathedrals and turquoise waters.
+            </p>
+          </div>
+
+          <div class="card card-flat">
+            <h3>🍒 Organic Cherries</h3>
+            <p class="small">
+              Chile Chico is famous for its cherries. Visit the orchards during season (Dec-Jan).
+            </p>
+          </div>
+
+          <div class="card card-flat">
+            <h3>🚵 Trekking & Cycling</h3>
+            <p class="small">
+              Scenic routes with mountain views. Perfect for adventurers and nature lovers.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- NEW SECTION: FAQ -->
+    <section class="section-sm" data-animate>
+      <div class="container-narrow">
+        <h2 class="text-center">Frequently Asked Questions</h2>
+        <p class="text-center text-muted mb-xl">
+          Answers to common questions
+        </p>
+
+        <div class="faq-list">
+          <div class="faq-item">
+            <div class="faq-question">
+              How do I get to Chile Chico?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                You can arrive by road from Coyhaique (270 km, 4-5 hours) or cross Lake General Carrera by barge from Puerto Ingeniero Ibáñez. Charter flights from Balmaceda are also available.
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              What's the best time to visit?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                High season is December to March (Patagonian summer). Milder weather and cherries in January. Autumn (March-April) offers spectacular golden landscapes.
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              Do you offer transport from the barge?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                We can coordinate transport from Puerto Ibáñez. Contact us via WhatsApp for special arrangements.
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              Are there vegetarian/vegan options at the restaurant?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                Yes, our menu includes vegetarian options. For special needs (vegan, gluten-free), let us know in advance and we'll prepare personalized dishes.
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
+
+  <!-- ENHANCED FOOTER -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-section">
+          <h4>Casona Belga</h4>
+          <p class="small">
+            Boutique hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
+          </p>
+        </div>
+
+        <div class="footer-section">
+          <h4>Links</h4>
+          <ul>
+            <li><a href="menu.html">Restaurant</a></li>
+            <li><a href="rooms.html">Rooms</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06" target="_blank" rel="noopener">Location</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Contact</h4>
+          <ul>
+            <li><a href="tel:+56998244016">+56 9 9824 4016</a></li>
+            <li><a href="mailto:casonabelga@gmail.com">casonabelga@gmail.com</a></li>
+            <li><a href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a></li>
+            <li><a href="https://www.instagram.com/casonabelga" target="_blank" rel="noopener">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="small">
+          © <span id="y"></span> Casona Belga · Rest well, eat better.
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <div class="mobile-bar" role="navigation" aria-label="Quick actions">
     <div class="inner">
