--- a/index.html
+++ b/index.html
@@ -156,13 +156,182 @@
       </div>
     </section>
 
-    <section class="footer">
-      <hr class="sep" />
-      <div class="small">
-        © <span id="y"></span> Casona Belga · Descansa bien, come mejor.
+    <!-- NUEVA SECCIÓN: Experiencia Patagónica -->
+    <section class="section-sm" data-animate>
+      <div class="container-narrow">
+        <div class="text-center">
+          <h2>Experiencia Patagónica Auténtica</h2>
+          <div class="decorative-line" style="margin: 24px auto;"></div>
+          <p class="lead">
+            En Casona Belga creemos en la hospitalidad consciente: cada detalle está pensado para tu bienestar y en armonía con nuestro entorno patagónico.
+          </p>
+        </div>
+
+        <div class="feature-list mt-xl" data-animate-stagger>
+          <div class="feature-item">
+            <div class="feature-icon">🌿</div>
+            <div class="feature-content">
+              <h4>Ingredientes Locales</h4>
+              <p>Trabajamos con productores de Chile Chico para ofrecer lo mejor de la Patagonia en cada plato.</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">🛏️</div>
+            <div class="feature-content">
+              <h4>Descanso Profundo</h4>
+              <p>Colchones premium, sábanas de 1000 hilos y lámparas de sal para tu recuperación total.</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">🏔️</div>
+            <div class="feature-content">
+              <h4>Conexión con la Naturaleza</h4>
+              <p>Ubicación privilegiada cerca del Lago General Carrera y la Cordillera de los Andes.</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">💚</div>
+            <div class="feature-content">
+              <h4>Sustentabilidad</h4>
+              <p>Prácticas responsables para cuidar nuestro entorno patagónico único.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- NUEVA SECCIÓN: Descubre Chile Chico -->
+    <section class="section-sm" data-animate>
+      <div class="container">
+        <h2 class="text-center">Descubre Chile Chico</h2>
+        <p class="text-center text-muted mb-xl">
+          Actividades y lugares imperdibles en la Patagonia
+        </p>
+
+        <div class="grid" data-animate-stagger>
+          <div class="card card-flat">
+            <h3>🚣 Lago General Carrera</h3>
+            <p class="small">
+              El segundo lago más grande de Sudamérica. Explora las Catedrales de Mármol y sus aguas turquesas.
+            </p>
+          </div>
+
+          <div class="card card-flat">
+            <h3>🍒 Cerezas Orgánicas</h3>
+            <p class="small">
+              Chile Chico es famoso por sus cerezas. Visita los huertos durante la temporada (dic-ene).
+            </p>
+          </div>
+
+          <div class="card card-flat">
+            <h3>🚵 Trekking y Ciclismo</h3>
+            <p class="small">
+              Rutas panorámicas con vistas a la Cordillera. Ideal para aventureros y amantes de la naturaleza.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- NUEVA SECCIÓN: FAQ -->
+    <section class="section-sm" data-animate>
+      <div class="container-narrow">
+        <h2 class="text-center">Preguntas Frecuentes</h2>
+        <p class="text-center text-muted mb-xl">
+          Respuestas a las dudas más comunes
+        </p>
+
+        <div class="faq-list">
+          <div class="faq-item">
+            <div class="faq-question">
+              ¿Cómo llego a Chile Chico?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                Puedes llegar por tierra desde Coyhaique (270 km, 4-5 horas) o cruzar el Lago General Carrera en barcaza desde Puerto Ingeniero Ibáñez. También hay vuelos charter desde Balmaceda.
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              ¿Cuál es la mejor época para visitar?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                La temporada alta es de diciembre a marzo (verano patagónico). Clima más templado y cerezas en enero. Otoño (marzo-abril) ofrece paisajes dorados espectaculares.
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              ¿Ofrecen transporte desde la barcaza?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                Podemos coordinar transporte desde Puerto Ibáñez. Contáctanos por WhatsApp para arreglos especiales.
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              ¿Hay opciones vegetarianas/veganas en el restaurante?
+            </div>
+            <div class="faq-answer">
+              <div class="faq-answer-content">
+                Sí, nuestra carta incluye opciones vegetarianas. Para necesidades especiales (vegano, celíaco), avísanos con anticipación y preparamos platos personalizados.
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
+
+  <!-- FOOTER MEJORADO -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-section">
+          <h4>Casona Belga</h4>
+          <p class="small">
+            Hotel & Restaurante boutique en Chile Chico, Región de Aysén. Experiencia patagónica auténtica.
+          </p>
+        </div>
+
+        <div class="footer-section">
+          <h4>Enlaces</h4>
+          <ul>
+            <li><a href="carta.html">Restaurante</a></li>
+            <li><a href="habitaciones.html">Hotel</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06" target="_blank" rel="noopener">Ubicación</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Contacto</h4>
+          <ul>
+            <li><a href="tel:+56998244016">+56 9 9824 4016</a></li>
+            <li><a href="mailto:casonabelga@gmail.com">casonabelga@gmail.com</a></li>
+            <li><a href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a></li>
+            <li><a href="https://www.instagram.com/casonabelga" target="_blank" rel="noopener">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="small">
+          © <span id="y"></span> Casona Belga · Descansa bien, come mejor.
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <div class="mobile-bar" role="navigation" aria-label="Acciones rápidas">
     <div class="inner">
