--- a/en/contact.html
+++ b/en/contact.html
@@ -85,11 +85,51 @@
         </div>
       </div>
     </div>
-
-    <section class="footer">
-      <hr class="sep" />
-    </section>
   </main>
+
+  <!-- ENHANCED FOOTER -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-section">
+          <h4>Casona Belga</h4>
+          <p class="small">
+            Boutique hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
+          </p>
+        </div>
+
+        <div class="footer-section">
+          <h4>Links</h4>
+          <ul>
+            <li><a href="menu.html">Restaurant</a></li>
+            <li><a href="rooms.html">Rooms</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Contact</h4>
+          <ul>
+            <li><a href="tel:+56998244016">+56 9 9824 4016</a></li>
+            <li><a href="mailto:casonabelga@gmail.com">casonabelga@gmail.com</a></li>
+            <li><a href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a></li>
+            <li><a href="https://www.instagram.com/casonabelga" target="_blank" rel="noopener">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="small">
+          © <span id="y"></span> Casona Belga · Rest well, eat better.
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 
   <div class="mobile-bar">
     <div class="inner">
