--- a/en/index.html
+++ b/en/index.html
@@ -213,6 +213,7 @@
 
         <div class="grid" data-animate-stagger>
           <div class="card card-flat">
+            <img src="../assets/LagoGC.jpeg" alt="Lake General Carrera with turquoise waters" class="card-image" loading="lazy" />
             <h3>🚣 Lake General Carrera</h3>
             <p class="small">
               South America's second-largest lake. Explore the Marble Cathedrals and turquoise waters.
@@ -220,6 +221,7 @@
           </div>
 
           <div class="card card-flat">
+            <img src="../assets/Cerezas.avif" alt="Fresh cherries from Chile Chico" class="card-image" loading="lazy" />
             <h3>🍒 Organic Cherries</h3>
             <p class="small">
               Chile Chico is famous for its cherries. Visit the orchards during season (Dec-Jan).
@@ -227,9 +229,10 @@
           </div>
 
           <div class="card card-flat">
-            <h3>🚵 Trekking & Cycling</h3>
+            <img src="../assets/PNP.jpeg" alt="Trekking and Patagonia National Park" class="card-image" loading="lazy" />
+            <h3>🥾 Trekking & Visit to Patagonia National Park</h3>
             <p class="small">
-              Scenic routes with mountain views. Perfect for adventurers and nature lovers.
+              Explore spectacular trails and discover the unique biodiversity of Patagonia National Park.
             </p>
           </div>
         </div>
