--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
         <div class="grid" data-animate-stagger>
           <div class="card card-flat">
+            <img src="assets/LagoGC.jpeg" alt="Lago General Carrera con aguas turquesas" class="card-image" loading="lazy" />
             <h3>🚣 Lago General Carrera</h3>
             <p class="small">
               El segundo lago más grande de Sudamérica. Explora las Catedrales de Mármol y sus aguas turquesas.
@@ -220,6 +221,7 @@
           </div>
 
           <div class="card card-flat">
+            <img src="assets/Cerezas.avif" alt="Cerezas frescas de Chile Chico" class="card-image" loading="lazy" />
             <h3>🍒 Cerezas Orgánicas</h3>
             <p class="small">
               Chile Chico es famoso por sus cerezas. Visita los huertos durante la temporada (dic-ene).
@@ -227,9 +229,10 @@
           </div>
 
           <div class="card card-flat">
-            <h3>🚵 Trekking y Ciclismo</h3>
+            <img src="assets/PNP.jpeg" alt="Trekking y Parque Nacional Patagonia" class="card-image" loading="lazy" />
+            <h3>🥾 Trekking y Visita al Parque Nacional Patagonia</h3>
             <p class="small">
-              Rutas panorámicas con vistas a la Cordillera. Ideal para aventureros y amantes de la naturaleza.
+              Explora senderos espectaculares y descubre la biodiversidad única del Parque Nacional Patagonia.
             </p>
           </div>
         </div>
