--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a class="btn" href="en/index.html">ENGLISH</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">
-          Reservar por WhatsApp
+          Reservar
         </a>
       </nav>
     </div>
