--- a/en/rooms.html
+++ b/en/rooms.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Rooms, rates from, policies, and availability inquiries via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../style.css?v=2" />
   <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/rooms.html" />
