--- a/habitaciones.html
+++ b/habitaciones.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Habitaciones, tarifas desde, políticas y consulta de disponibilidad por WhatsApp." />
 
   <meta name="theme-color" content="#07070a" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/habitaciones.html" />
