--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Casona Belga | Hotel & Restaurante</title>
   <meta name="description" content="Hotel & Restaurante. Reserva directa por WhatsApp. Restaurante, Hotel, Ubicación y Horarios." />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
   <meta name="theme-color" content="#07070a" />
 
