--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Contacto, ubicación, horarios y WhatsApp directo." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/contacto.html" />
