--- a/en/en_index.html
+++ b/en/en_index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Hotel & Restaurant. Book direct via WhatsApp. Menu, rooms, location and hours." />
 
   <meta name="theme-color" content="#07070a" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../style.css?v=2" />
   <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/index.html" />
