--- a/carta.html
+++ b/carta.html
@@ -30,8 +30,8 @@
       </div>
 
       <nav class="menu">
-        <a href="habitaciones.html">Hotel</a>
-        <a href="contacto.html">Contacto</a>
+        <a class="btn" href="habitaciones.html">Hotel</a>
+        <a class="btn" href="contacto.html">Contacto</a>
 
         <!-- Idioma -->
         <a class="btn" href="en/menu.html">ENGLISH</a>
