--- a/contacto.html
+++ b/contacto.html
@@ -30,8 +30,8 @@
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Restaurante</a>
-        <a href="habitaciones.html">Hotel</a>
+        <a class="btn" href="carta.html">Restaurante</a>
+        <a class="btn" href="habitaciones.html">Hotel</a>
 
         <!-- Idioma -->
         <a class="btn" href="en/contact.html">ENGLISH</a>
