--- a/en/contact.html
+++ b/en/contact.html
@@ -30,8 +30,8 @@
       </div>
 
       <nav class="menu">
-        <a href="menu.html">Restaurant</a>
-        <a href="rooms.html">Rooms</a>
+        <a class="btn" href="menu.html">Restaurant</a>
+        <a class="btn" href="rooms.html">Rooms</a>
 
         <!-- Language -->
         <a class="btn" href="../contacto.html">ESPAÑOL</a>
