--- a/en/en_index.html
+++ b/en/en_index.html
@@ -63,9 +63,9 @@
       </div>
 
       <nav class="menu" aria-label="Navigation">
-        <a href="menu.html">Restaurant</a>
-        <a href="rooms.html">Rooms</a>
-        <a href="contact.html">Contact</a>
+        <a class="btn" href="menu.html">Restaurant</a>
+        <a class="btn" href="rooms.html">Rooms</a>
+        <a class="btn" href="contact.html">Contact</a>
 
         <!-- Language -->
         <a class="btn" href="../index.html">ESPAÑOL</a>
