--- a/en/menu.html
+++ b/en/menu.html
@@ -30,8 +30,8 @@
       </div>
 
       <nav class="menu">
-        <a href="rooms.html">Rooms</a>
-        <a href="contact.html">Contact</a>
+        <a class="btn" href="rooms.html">Rooms</a>
+        <a class="btn" href="contact.html">Contact</a>
 
         <!-- Language -->
         <a class="btn" href="../carta.html">ESPAÑOL</a>
