--- a/en/rooms.html
+++ b/en/rooms.html
@@ -30,8 +30,8 @@
       </div>
 
       <nav class="menu">
-        <a href="menu.html">Restaurant</a>
-        <a href="contact.html">Contact</a>
+        <a class="btn" href="menu.html">Restaurant</a>
+        <a class="btn" href="contact.html">Contact</a>
 
         <a class="btn" href="../habitaciones.html">ESPAÑOL</a>
 
