--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       </div>
 
       <nav class="menu" aria-label="Navegación">
-        <a href="carta.html">Restaurante</a>
-        <a href="habitaciones.html">Hotel</a>
-        <a href="contacto.html">Contacto</a>
+        <a class="btn" href="carta.html">Restaurante</a>
+        <a class="btn" href="habitaciones.html">Hotel</a>
+        <a class="btn" href="contacto.html">Contacto</a>
 
         <!-- Idioma -->
         <a class="btn" href="en/en_index.html">ENGLISH</a>
