--- a/habitaciones.html
+++ b/habitaciones.html
@@ -30,8 +30,8 @@
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Restaurante</a>
-        <a href="contacto.html">Contacto</a>
+        <a class="btn" href="carta.html">Restaurante</a>
+        <a class="btn" href="contacto.html">Contacto</a>
 
         <!-- Idioma -->
         <a class="btn" href="en/rooms.html">ENGLISH</a>
