--- a/carta.html
+++ b/carta.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Carta Restaurante Casona Belga Temporada 2025–2026. Reserva por WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css?v=2" />
+  <link rel="stylesheet" href="style.css?v=3" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/carta.html" />
@@ -42,12 +42,12 @@
   </header>
 
   <main class="container section">
-    <div data-animate>
+    <div>
       <h2>Carta Temporada 2025–2026</h2>
       <p class="muted">Precios en CLP. Para reservas o consultas, escríbenos por WhatsApp.</p>
     </div>
 
-    <div class="cta-row" data-animate>
+    <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Reservar mesa</a>
       <a class="btn" href="index.html">⬅ Volver</a>
     </div>
@@ -55,7 +55,7 @@
     <hr class="sep" />
 
     <!-- COMIDA -->
-    <div class="grid" data-animate-stagger>
+    <div class="grid">
       <div class="card">
         <h2>Entradas</h2>
         <div class="list">
