--- a/en/menu.html
+++ b/en/menu.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Casona Belga Restaurant Menu 2025–2026 season. Book via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="../style.css?v=2" />
+  <link rel="stylesheet" href="../style.css?v=3" />
   <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/menu.html" />
@@ -42,12 +42,12 @@
   </header>
 
   <main class="container section">
-    <div data-animate>
+    <div>
       <h2>2025–2026 Season Menu</h2>
       <p class="muted">Prices in CLP. For bookings or questions, message us on WhatsApp.</p>
     </div>
 
-    <div class="cta-row" data-animate>
+    <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Book a table</a>
       <a class="btn" href="index.html">⬅ Back</a>
     </div>
@@ -55,7 +55,7 @@
     <hr class="sep" />
 
     <!-- FOOD -->
-    <div class="grid" data-animate-stagger>
+    <div class="grid">
       <div class="card">
         <h2>Starters</h2>
         <div class="list">
