--- a/en/rooms.html
+++ b/en/rooms.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Rooms, rates from, policies, and availability inquiries via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="../style.css?v=2" />
+  <link rel="stylesheet" href="../style.css?v=3" />
   <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/rooms.html" />
@@ -41,21 +41,21 @@
   </header>
 
   <main class="container section">
-    <div data-animate>
+    <div>
       <h2>Rooms</h2>
       <p class="muted">
         We have 3 rooms equipped with a queen bed, with the option to add an extra single bed for a flexible and comfortable stay (capacity 2–3 guests).
       </p>
     </div>
 
-    <div class="cta-row" data-animate>
+    <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Check availability</a>
       <a class="btn" href="index.html">⬅ Back</a>
     </div>
 
     <hr class="sep" />
 
-    <div class="grid" data-animate-stagger>
+    <div class="grid">
       <div class="card">
         <h2>Tehuelche Room</h2>
         <p class="muted">Capacity: 2–3 · Bathroom: Private · Breakfast: Mon–Sun 7:30–10:00</p>
