--- a/habitaciones.html
+++ b/habitaciones.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Habitaciones, tarifas desde, políticas y consulta de disponibilidad por WhatsApp." />
 
   <meta name="theme-color" content="#07070a" />
-  <link rel="stylesheet" href="style.css?v=2" />
+  <link rel="stylesheet" href="style.css?v=3" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/habitaciones.html" />
@@ -42,19 +42,19 @@
   </header>
 
   <main class="container section">
-    <div data-animate>
+    <div>
       <h2>Habitaciones</h2>
       <p class="muted">Tenemos 3 habitaciones equipadas con cama matrimonial, y la opción de incorporar una cama individual adicional, para una estadía flexible y confortable (capacidad 2–3 personas).</p>
     </div>
 
-    <div class="cta-row" data-animate>
+    <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
       <a class="btn" href="index.html">⬅ Volver</a>
     </div>
 
     <hr class="sep" />
 
-    <div class="grid" data-animate-stagger>
+    <div class="grid">
       <div class="card">
         <h2>Habitación Tehuelche</h2>
         <p class="muted">Capacidad: 2–3 · Baño: Privado · Desayuno: Lun–Dom 7:30–10:00</p>
