--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Contacto, ubicación, horarios y WhatsApp directo." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css?v=2" />
+  <link rel="stylesheet" href="style.css?v=3" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/contacto.html" />
@@ -62,13 +62,21 @@
       <div class="card">
         <h2>Ubicación</h2>
         <p class="muted">Bernardo O'Higgins 895, Chile Chico, Aysén · Chile 🇨🇱</p>
+        <div style="margin-top: var(--space-md); margin-bottom: var(--space-md);">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2635.8!2d-71.7215!3d-46.5419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9610e06c0f8d47e9%3A0x537620c01beb3f06!2sCasona%20Belga%20Restaurante!5e0!3m2!1ses!2scl!4v1234567890"
+            width="100%"
+            height="300"
+            style="border:0; border-radius: var(--radius-md);"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
         <div class="cta-row">
           <a class="btn primary" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">🗺️ Abrir en Google Maps</a>
           <a class="btn" href="https://share.google/9nMjn10Yoa6bR6Ah8" target="_blank" rel="noopener">⭐ Ver en Google</a>
         </div>
-        <p class="small" style="margin-top:10px;">
-          Si quieres mapa embebido (más pesado), se puede agregar luego.
-        </p>
       </div>
 
       <div class="card">
