--- a/en/en_index.html
+++ b/en/en_index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Hotel & Restaurant. Book direct via WhatsApp. Menu, rooms, location and hours." />
 
   <meta name="theme-color" content="#07070a" />
-  <link rel="stylesheet" href="../style.css?v=2" />
+  <link rel="stylesheet" href="../style.css?v=3" />
   <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/index.html" />
@@ -108,6 +108,17 @@
           <div class="kv">
             <strong>Location</strong>
             <span>Bernardo O'Higgins 895, Chile Chico, Aysén · Chile Chico</span>
+          </div>
+          <div style="margin-top: var(--space-md);">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2635.8!2d-71.7215!3d-46.5419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9610e06c0f8d47e9%3A0x537620c01beb3f06!2sCasona%20Belga%20Restaurante!5e0!3m2!1sen!2scl!4v1234567890"
+              width="100%"
+              height="300"
+              style="border:0; border-radius: var(--radius-md);"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
           <div class="cta-row">
             <a class="btn" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">🗺️ Open in Maps</a>
