--- a/carta.html
+++ b/carta.html
@@ -175,7 +175,11 @@
 
         <h2>Vinos</h2>
         <div class="list">
-          <div class="item"><div class="title">Allá Lejos (Chile Chico) — el vino más austral del mundo</div><div class="price">$ 45.000</div></div>
+          <div class="item"><div class="title">Allá Lejos, de Chile Chico — el vino más austral del mundo</div><div class="price">$ 45.000</div></div>
+          <div class="item"><div class="title">Categoría Premium o Gran Reserva</div><div class="price">$ 38.000</div></div>
+          <div class="item"><div class="title">Categoría Reserva</div><div class="price">$ 28.000</div></div>
+          <div class="item"><div class="title">Copa de vino</div><div class="price">$ 6.500</div></div>
+          <div class="item"><div class="title">Descorche</div><div class="price">$ 10.000</div></div>
         </div>
       </div>
     </div>
