--- a/en/menu.html
+++ b/en/menu.html
@@ -175,7 +175,11 @@
 
         <h2>Wines</h2>
         <div class="list">
-          <div class="item"><div class="title">Allá Lejos (Chile Chico) — the southernmost wine in the world</div><div class="price">$ 45.000</div></div>
+          <div class="item"><div class="title">Allá Lejos, from Chile Chico — the southernmost wine in the world</div><div class="price">$ 45.000</div></div>
+          <div class="item"><div class="title">Premium or Gran Reserva Category</div><div class="price">$ 38.000</div></div>
+          <div class="item"><div class="title">Reserva Category</div><div class="price">$ 28.000</div></div>
+          <div class="item"><div class="title">Glass of wine</div><div class="price">$ 6.500</div></div>
+          <div class="item"><div class="title">Corkage</div><div class="price">$ 10.000</div></div>
         </div>
       </div>
     </div>
