--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#07070a" />
 
   <link rel="stylesheet" href="style.css?v=3" />
+  <link rel="stylesheet" href="chatbot.css" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/contacto.html" />
@@ -147,5 +148,6 @@
   </div>
 
   <script src="script.js" defer></script>
+  <script src="chatbot.js" defer></script>
 </body>
 </html>
