--- a/en/en_index.html
+++ b/en/en_index.html
@@ -8,6 +8,7 @@
 
   <meta name="theme-color" content="#07070a" />
   <link rel="stylesheet" href="../style.css?v=3" />
+  <link rel="stylesheet" href="../chatbot.css" />
   <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/index.html" />
@@ -348,6 +349,7 @@
   </footer>
 
   <script src="../script.js" defer></script>
+  <script src="../chatbot-en.js" defer></script>
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
