--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Casona Belga | Hotel & Restaurante</title>
   <meta name="description" content="Hotel & Restaurante. Reserva directa por WhatsApp. Restaurante, Hotel, Ubicación y Horarios." />
 
-  <link rel="stylesheet" href="style.css?v=3" />
+  <link rel="stylesheet" href="style.css?v=4" />
+  <link rel="stylesheet" href="chatbot.css" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
   <meta name="theme-color" content="#07070a" />
 
@@ -348,6 +349,7 @@
   </footer>
 
   <script src="script.js" defer></script>
+  <script src="chatbot.js" defer></script>
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
